--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 layout: home
 author_profile: true
 ---
+
+Hi, I'm a Research Fellow at the Athinoula A. Martinos Center for Biomedical Imaging, Massachusetts General Hospital (MGH), and Harvard Medical School (HMS)
+
+Research Interests: Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD), Machine/Deep Learning
