--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ author_profile: true
 ---
 
 Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the Athinoula A. Martinos Center for Biomedical Imaging, Massachusetts General Hospital (MGH), and Harvard Medical School (HMS).
-<br> You can find the links for my posts, publications, and curriculum vitae on this website.
-<br> Research Interests: Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD), Machine/Deep Learning
+<br><br> You can find the links for my posts, publications, and curriculum vitae on this website.
+<br><br> Research Interests: Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD), Machine/Deep Learning
