--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 author_profile: true
 ---
 
-Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the Athinoula A. Martinos Center for Biomedical Imaging, Massachusetts General Hospital (MGH), and Harvard Medical School (HMS).
-<br><br> You can find the links for my posts, publications, and curriculum vitae on this website.
+Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the [Athinoula A. Martinos Center for Biomedical Imaging](https://www.martinos.org/), [Massachusetts General Hospital (MGH)](https://www.massgeneral.org/), and [Harvard Medical School (HMS)](https://hms.harvard.edu/).
+<br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
 <br><br> Research Interests: Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD), Machine/Deep Learning
