--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@ author_profile: true
 Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
 <br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
 <br><br> Research Interests: Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD), Machine/Deep Learning
+<br><br> Email: yjun AT mgh DOT harvard DOT edu
+<br><br> Office: 149 13th St, Charlestown, MA 02129
