--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 author_profile: true
 ---
 
+<p style style="line-height: 100%">
 <font size="4.0">
 Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
 <br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
@@ -10,3 +11,4 @@ Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the <a href="http
 <br><br> <b>Email:</b> yjun AT mgh DOT harvard DOT edu
 <br><br> <b>Office:</b> 149 13th St, Charlestown, MA 02129
 </font>
+</p>
