--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: home
 author_profile: true
 ---
 
-<h1 style="font-size: 0.8em;">
+<font size="4.5">
 Hi, I'm Yohan and working as a Postdoctoral Research Fellow at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
 <br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
-<br><br> Research Interests: Machine/Deep Learning, Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD)
-<br><br> Email: yjun AT mgh DOT harvard DOT edu
-<br><br> Office: 149 13th St, Charlestown, MA 02129
-</h1>
+<br><br> <b>Research Interests:</b> Machine/Deep Learning, Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD)
+<br><br> <b>Email:</b> yjun AT mgh DOT harvard DOT edu
+<br><br> <b>Office:</b> 149 13th St, Charlestown, MA 02129
+</font>
