--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: true
 ---
 
-Hi, I'm Yohan and working as a Instructor/Faculty at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
+Hi, I'm Yohan and working as an Instructor/Faculty at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
 <br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
 <br><br> <b>Research Interests:</b> Machine/Deep Learning, Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD)
 <br><br> <b>Email:</b> yjun AT mgh DOT harvard DOT edu
