--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@ layout: home
 author_profile: true
 ---
 
-Hi, I'm Yohan and working as an Instructor/Faculty at the <a href="https://www.martinos.org/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://www.massgeneral.org/">Massachusetts General Hospital (MGH)</a>, and <a href="https://hms.harvard.edu/">Harvard Medical School (HMS)</a>.
+Hi, I'm Yohan and working as an Instructor/Faculty at the <a href="https://www.martinos.org/investigator/yohan-jun/">Athinoula A. Martinos Center for Biomedical Imaging</a>, <a href="https://researchers.mgh.harvard.edu/profile/27719203/Yohan-Jun">Massachusetts General Hospital (MGH)</a>, and <a href="https://connects.catalyst.harvard.edu/Profiles/display/Person/203697">Harvard Medical School (HMS)</a>.
 <br><br> You can find the links for my bio, publications, and curriculum vitae on this website.
+
+We are looking for a postdoc in our group. Please find the <a href="assets/2025_MGH_PostdocAdvert.pdf" target="blank">flyer</a> and reach out to us if you are interested!
+
 <br><br> <b>Research Interests:</b> Machine/Deep Learning, Magnetic Resonance Imaging (MRI), Image Reconstruction, Computer-aided Diagnosis (CAD)
 <br><br> <b>Email:</b> yjun AT mgh DOT harvard DOT edu
 <br><br> <b>Office:</b> 149 13th St, Charlestown, MA 02129
